[IMP] web, *: fix favorite alignment
*: account, hr_recruitment, project, lunch, mrp

By removing the absolute positioning on ".o_favorite" inside kanban
views, we allow it to align naturally with the rest of the elements,
thus removing the custom code that was needed for padding.

By doing so however the icon - which is now only visible on hovering the
card in the Project's kanban view - should remain visible at all times.
The behaviour would be the same as in other kanban views: an outlined
star when not active and a full yellow star when it is.

The margin on the kanban heading in the Manufacturing orders has been
removed to realign the top elements.

task-3462098

X-original-commit: 89082fbd560959f1ab747dd2d027d027f68a3a0f

--- a/addons/web/static/src/views/kanban/kanban_dashboard.scss
+++ b/addons/web/static/src/views/kanban/kanban_dashboard.scss
@@ -27,11 +27,6 @@
         // -------  Kanban Record Titles -------
         // Uniform design across different HTML layouts
 
-        // Provide enough room for the dropdown-toggle
-        .o_primary {
-            padding-right: calc(var(--KanbanRecord-padding-h) * 2);
-        }
-
         // Uniform titles
         .o_kanban_card_header_title .o_primary,
         .o_kanban_primary_left .o_primary > span:first-child,
@@ -45,11 +40,6 @@
             font-weight: 500;
             font-size: $font-size-sm;
             color: $text-muted;
-        }
-
-        // Provide enough room to add an icon before the title
-        &.o_has_icon .o_primary {
-            padding-left: $o-kanban-record-margin*1.5;
         }
 
         // -------  Kanban Content -------
@@ -183,14 +173,6 @@
             }
         }
 
-    }
-
-    .o_favorite {
-        @include o-position-absolute(
-            $top: 3px,
-            $left: calc(var(--KanbanRecord-padding-h) - #{$o-horizontal-padding})
-        );
-        padding: $o-kanban-record-margin;
     }
 }
 
